--- a/packages/evmos-wallet/package.json
+++ b/packages/evmos-wallet/package.json
@@ -56,9 +56,9 @@
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "@web3modal/ethereum": "=2.0.0-rc.2",
-    "@web3modal/standalone": "=2.0.0-rc.2",
-    "@web3modal/react": "=2.0.0-rc.2",
+    "@web3modal/ethereum": "^2.6.0",
+    "@web3modal/standalone": "^2.4.3",
+    "@web3modal/react": "^2.6.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "ethers": "^5.7.2",
